hphp/hack/test/typecheck/test_consts14.php.exp
File "test_consts14.php", line 15, characters 7-7:
Class B does not correctly implement all required methods  (Typing[4110])
File "test_consts14.php", line 15, characters 17-17:
Some methods are incompatible with those declared in type A
Read the following to see why:
File "test_consts14.php", line 4, characters 9-11:
This is an int
File "test_consts14.php", line 10, characters 9-14:
It is incompatible with a string
